--- a/package.json
+++ b/package.json
@@ -6,8 +6,17 @@
     "react-scripts": "0.8.5"
   },
   "dependencies": {
+    "humps": "^2.0.0",
+    "lodash": "^4.17.4",
+    "normalizr": "^3.1.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-mdl": "^1.9.0",
+    "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
+    "react-router-redux": "^4.0.7",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
